fix extra space when choosing & hashroute

--- a/src/App.css
+++ b/src/App.css
@@ -7,24 +7,29 @@ h1{
     margin-top: 200px;
 }
 
+h2{
+    justify-content: center;
+    text-align: center;
+}
+
 .gameSetting{
     background-color: #202b33;
+    text-align: center;
     border: solid 1px transparent;
     border-radius: 4px;
     padding: 10px 20px;
-    color: #ffffff;
-    font-size: 24px;
+    color: lightblue;
+    font-size: 20px;
     margin: auto;
     margin-top: 30px;
     width: 240px;
     height: 80px;
     cursor: pointer;
     display: block;
-
 }
 
 .gameSetting:hover{
-    background-color: aqua;
+    background-color: red;
 }
 
 .outerContainer{
